--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <p>Manufacturers & Suppliers of Catering Disposables</p>
     <input type="text" id="searchInput" placeholder="Search products..." />
   </header>
-
-  <main>
-    <div id="catalog"></div>
-  </main>
-
+  <main><div id="catalog"></div></main>
   <footer id="contact">
     <p>Contact: info@londonlidsltd.com | Phone: 0208 523 2000</p>
     <p>Address: UNIT 2, JUSTIN ROAD, AVENUE INDUSTRIAL ESTATE, LONDON, E4 8SU</p>
