--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="London Lids Logo" class="logo"/>
+    <img src="C:\Users\KARTHIK BURADA\Downloads\london-lids-final-full-product-site\london-lids-full-site\images/logo.png" alt="London Lids Logo" class="logo"/>
     <h1>London Lids Limited</h1>
     <p>Manufacturers & Suppliers of Catering Disposables</p>
     <input type="text" id="searchInput" placeholder="Search products..." />
