--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
+<input type="text" id="searchInput" placeholder="Search products..." style="width: 100%; padding: 10px; margin: 20px 0;" />
+<div id="productContainer" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px;"></div>
+<script src="script.js"></script>
 <body>
   <header>
     <img src="C:\Users\KARTHIK BURADA\Downloads\london-lids-final-full-product-site\london-lids-full-site\images/logo.png" alt="London Lids Logo" class="logo"/>
