--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>London Lids Product Catalog</title>
+  <title>London Lids Catalog</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="London Lids Logo" class="logo"/>
+    <img src="images/logo.png" class="logo" alt="Logo" />
     <h1>London Lids Limited</h1>
     <p>Manufacturers & Suppliers of Catering Disposables</p>
     <input type="text" id="searchInput" placeholder="Search products..." />
   </header>
   <main><div id="catalog"></div></main>
-  <footer id="contact">
-    <p>Contact: info@londonlidsltd.com | Phone: 0208 523 2000</p>
+  <footer>
+    <p>Contact: info@londonlidsltd.com | 0208 523 2000</p>
     <p>Address: UNIT 2, JUSTIN ROAD, AVENUE INDUSTRIAL ESTATE, LONDON, E4 8SU</p>
-    <p>&copy; 2025 London Lids Ltd. All rights reserved.</p>
   </footer>
 </body>
 </html>
