--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>London Lids Catalog</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>London Lids Product Catalog</title>
+  <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
   <header>
-    <img src="images/logo.png" class="logo" alt="Logo" />
+    <img src="logo.png" class="logo" alt="London Lids Logo" />
     <h1>London Lids Limited</h1>
     <p>Manufacturers & Suppliers of Catering Disposables</p>
     <input type="text" id="searchInput" placeholder="Search products..." />
   </header>
-  <main><div id="catalog"></div></main>
+
+  <main>
+    <div id="catalog"></div>
+  </main>
+
   <footer>
     <p>Contact: info@londonlidsltd.com | 0208 523 2000</p>
     <p>Address: UNIT 2, JUSTIN ROAD, AVENUE INDUSTRIAL ESTATE, LONDON, E4 8SU</p>
