--- a/index.html
+++ b/index.html
@@ -3,25 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>London Lids Product Catalog</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
+  <title>London Lids Ltd - Home</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <img src="logo.png" class="logo" alt="London Lids Logo" />
-    <h1>London Lids Limited</h1>
-    <p>Manufacturers & Suppliers of Catering Disposables</p>
-    <input type="text" id="searchInput" placeholder="Search products..." />
+    <img src="images/logo.png" alt="London Lids Logo" height="60">
+    <h1>Welcome to London Lids Ltd</h1>
+    <nav>
+      <ul>
+        <li><a href="aluminium.html">Aluminium</a></li>
+        <li><a href="plastic.html">Plastic</a></li>
+        <li><a href="bagasse.html">Bagasse</a></li>
+        <li><a href="bags.html">Bags</a></li>
+        <li><a href="liners.html">Liners</a></li>
+        <li><a href="napkins.html">Napkins</a></li>
+        <li><a href="catering.html">Catering</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <div id="catalog"></div>
+    <section>
+      <h2>About Us</h2>
+      <p>We are a trusted family-run business with over 20 years of experience in food packaging. Our mission is to provide recyclable and reusable catering disposables for food service businesses across the UK.</p>
+    </section>
+
+    <section>
+      <h2>Popular Categories</h2>
+      <ul>
+        <li><a href="aluminium.html">Aluminium Foil Containers</a></li>
+        <li><a href="plastic.html">Microwave & Black Base Containers</a></li>
+        <li><a href="bagasse.html">Eco-Friendly Bagasse Products</a></li>
+        <li><a href="catering.html">Foils & Cling Film</a></li>
+        <li><a href="bags.html">Paper & Plastic Bags</a></li>
+        <li><a href="napkins.html">Napkins & Paperware</a></li>
+      </ul>
+    </section>
   </main>
 
   <footer>
-    <p>Contact: info@londonlidsltd.com | 0208 523 2000</p>
-    <p>Address: UNIT 2, JUSTIN ROAD, AVENUE INDUSTRIAL ESTATE, LONDON, E4 8SU</p>
+    <p>Contact us: info@londonlidsltd.com | 0208 523 2000</p>
+    <p>© 2025 London Lids Ltd. All rights reserved.</p>
   </footer>
 </body>
 </html>
